Switch - alignment bugfix

--- a/scss/_switch.scss
+++ b/scss/_switch.scss
@@ -22,6 +22,8 @@
             width: 2.8rem;
             height: 1.4rem;
             margin-top: .4rem;
+            margin-bottom: -0.4rem;
+            margin-right: .5rem;
             border-radius: 9999px;
 
             &:hover {
